# linkeadisimo

./: .gitignore  README  README.md  app.py  database.py  linkeadisimo.py  manage.py  models.py  pyproject.toml  render.yaml
linkeadisimo/: asgi.py  settings.py  urls.py  wsgi.py
project/: manage.py
project/linkeadisimo/: settings.py  urls.py
project/website/: models.py  urls.py  views.py
project/website/templates/website/: index.html  publication.html
templates/: index.html  login.html
website/: admin.py  forms.py  models.py  urls.py  views.py
website/migrations/: 0001_initial.py  0002_auto_20191224_1614.py  0002_auto_20200111_1336.py  0002_comment_deleted.py  0003_auto_20191225_2108.py  0003_comment_publication.py  0003_publication_domain.py  0004_auto_20191226_1237.py  0004_remove_comment_publication.py  0005_comment_publication.py  0005_remove_publication_is_text.py  0006_auto_20200111_2152.py  0006_comment.py  0007_auto_20200109_1910.py
website/static/website/css/: style.css
website/static/website/js/: linkeadisimo.js
website/templates/website/: base.html  comment_edit.html  comment_t.html  index.html  login.html  pubcard.html  publication.html  register.html  submit.html
website/templates/website/components/: login_form.html  pubcard.html  register_form.html
website/templates/website/components/comment/: comment.html  comment_buttons.html  comment_text.html
website/templates/website/pages/: index.html  login.html  publication.html  register.html
website/views/: comment.py  login.py  register.py  submit.py  views.py
