[tool.poetry]
name = "linkeadisimo"
version = "0.1.0"
description = "A simple link aggregator"
authors = ["Dylan Socolobsky <dsocolobsky@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
dj-database-url = "^1.2.0"
psycopg2-binary = "^2.9.5"
gunicorn = "^20.1.0"
whitenoise = {extras = ["brotli"], version = "^6.3.0"}

[tool.poetry.dev-dependencies]
black = "^22.10.0"
django-extensions = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
